package logic.actor;

public abstract class Actor{
    public abstract int getLevel();
    public abstract void attack();
}
