@startuml
class utils.Randomizer {
- {static} Random randomizer
+ {static} Random getRandomizer()
}
class logic.actor.Villager {
+ int getLevel()
+ void attack()
+ String toString()
}
class logic.game.GameController {
- int hp
- int score
- {static} GameController instance
- ArrayList<Actor> actors
- ArrayList<Ghost> ghosts
- ArrayList<Item> items
- void initGame()
+ {static} GameController getInstance()
+ void play(Actor)
+ boolean isGameOver()
+ void updateGameController()
+ int getHp()
+ void setHp(int)
+ int getScore()
+ ArrayList<Ghost> getGhosts()
+ ArrayList<Item> getItems()
+ void setScore(int)
+ void addNewActor(Actor)
+ void addNewItem(Item)
+ void addNewGhost(Ghost)
+ ArrayList<Actor> getActor()
}
class grader.student.GhostDoctorTest {
~ GhostDoctor ghostDoctor
~ void setUp()
~ void testGetLevel()
~ void testAttackLowGhost()
~ void testAttackHighGhost()
~ void testToString()
}
class grader.student.PryGhostTest {
~ PryGhost pryGhost
~ void setUp()
~ void testConstructor()
~ void testIsDestroyedFalse()
~ void testIsDestroyedTrue()
~ void testDecreaseHp()
~ void testDecreaseHpBelowZero()
~ void testAttack()
~ void testToString()
}
class logic.ghost.PooYaGhost {
- int power
+ int getLevel()
+ String toString()
+ void attack()
+ void damage()
}
class utils.GameUtils {
+ {static} Ghost getNewGhost(int)
+ {static} Ghost getRandomGhost(boolean)
+ {static} Actor getNewActor(int)
+ {static} Item getNewItem(int)
}
abstract class logic.ghost.Ghost {
- int hp
+ boolean isDestroyed()
+ void decreaseHp(int)
+ int getHp()
+ {abstract}int getLevel()
+ {abstract}void attack()
}
abstract class logic.actor.Actor {
+ {abstract}int getLevel()
+ {abstract}void attack()
}
class grader.student.GameControllerTest {
~ void testPlayNotDestroyedGhost()
~ void testPlayDestroyedGhost()
~ void testPlayWithItem()
~ void testIsGameOver()
}
class grader.student.PongGhostTest {
~ PongGhost pongGhost
~ void setUp()
~ void testConstructor()
~ void testIsDestroyedFalse()
~ void testIsDestroyedTrue()
~ void testGetHp()
~ void testDecreaseHp()
~ void testDecreaseHpBelowZero()
~ void testGetLevel()
~ void testAttack()
~ void testToString()
~ void testDamage()
}
class logic.actor.Monk {
+ int getLevel()
+ void attack()
+ String toString()
}
class logic.item.Banana {
+ int getLevel()
+ void effect()
+ String toString()
}
abstract class logic.ghost.HighGhost {
+ {abstract}void damage()
}
class logic.ghost.PongGhost {
- int power
+ int getLevel()
+ String toString()
+ void attack()
+ void damage()
}
class logic.game.GameIO {
- {static} Scanner sc
+ {static} Actor selectActor(ArrayList<Actor>)
+ {static} void showItemList(ArrayList<Item>)
+ {static} void showCurrentGhost(ArrayList<Ghost>)
+ {static} void showGameState()
+ {static} void buyNewActor()
+ {static} void buyNewItem()
}
abstract class logic.item.Item {
+ {abstract}int getLevel()
+ {abstract}void effect()
}
class application.Main {
- {static} Scanner sc
+ {static} void main(String[])
}
class logic.actor.Monkey {
+ int getLevel()
+ void attack()
+ String toString()
}
class utils.Config {
+ {static} int GhostDoctorLevel
+ {static} int MonkLevel
+ {static} int MonkeyLevel
+ {static} int VillagerLevel
+ {static} int GaGhostEnergy
+ {static} int HighGhostHp
+ {static} int LowGhostHp
+ {static} int LowGhostLevel
+ {static} int MaBongGhostPower
+ {static} int MaBongGhostSpeed
+ {static} int PongGhostPower
+ {static} int PongGhostLevel
+ {static} int PooYaGhostLevel
+ {static} int PryGhostPower
+ {static} int AmuletLevel
+ {static} int BananaLevel
+ {static} int SultLevel
+ {static} int LeklaiLevel
}
class logic.ghost.PryGhost {
- int power
- int ppt
+ String toString()
+ void attack()
+ int getPpt()
+ void setPpt(int)
}
class grader.student.LeklaiTest {
~ Leklai leklai
~ void setUp()
~ void testGetLevel()
~ void testEffectOnLowGhost()
~ void testEffectOnHighGhost1()
~ void testEffectOnHighGhost2()
~ void testToString()
}
abstract class logic.ghost.LowGhost {
+ int getLevel()
}
class logic.ghost.MaBongGhost {
- int power
- int speed
+ String toString()
+ void attack()
+ int getSpeed()
+ void setSpeed(int)
+ int getPower()
+ void setPower(int)
}
class logic.item.Amulet {
+ int getLevel()
+ void effect()
+ String toString()
}
class logic.actor.GhostDoctor {
+ int getLevel()
+ void attack()
+ String toString()
}
class grader.student.GaGhostTest {
~ GaGhost gaGhost
~ void setUp()
~ void testConstructor()
~ void testIsDestroyedFalse()
~ void testIsDestroyedTrue()
~ void testGetHp()
~ void testDecreaseHp()
~ void testDecreaseHpBelowZero()
~ void testAttack()
~ void testToString()
}
class grader.student.MonkeyTest {
~ Monkey monkey
~ void setUp()
~ void testGetLevel()
~ void testAttackLowGhostWithoutBanana()
~ void testAttackLowGhostWithBanana()
~ void testToString()
}
class grader.student.VillagerTest {
~ Villager villager
~ void setUp()
~ void testGetLevel()
~ void testAttackLowGhostWithoutAmulet()
~ void testAttackLowGhostWithAmulet()
~ void testToString()
}
class grader.student.PooYaGhostTest {
~ PooYaGhost pooYaGhost
~ void setUp()
~ void testIsDestroyedFalse()
~ void testIsDestroyedTrue()
~ void testGetHp()
~ void testDecreaseHp()
~ void testDecreaseHpBelowZero()
~ void testAttack()
~ void testToString()
~ void testDamage()
}
class logic.ghost.GaGhost {
- int energy
+ String toString()
+ void attack()
}
class grader.student.AmuletTest {
~ Amulet amulet
~ void setUp()
~ void testGetLevel()
~ void testEffectWithLowHp()
~ void testEffectWithHighHp()
~ void testToString()
}
class grader.student.MonkTest {
~ Monk monk
~ void setUp()
~ void testGetLevel()
~ void testAttackHighGhost()
~ void testAttackLowGhost()
~ void testToString()
}
class grader.student.MaBongGhostTest {
~ MaBongGhost maBongGhost
~ void setUp()
~ void testConstructor()
~ void testIsDestroyedFalse()
~ void testIsDestroyedTrue()
~ void testGetHp()
~ void testDecreaseHp()
~ void testDecreaseHpBelowZero()
~ void testGetLevel()
~ void testAttack()
~ void testToString()
}
class logic.item.Leklai {
+ int getLevel()
+ void effect()
+ String toString()
}


logic.actor.Actor <|-- logic.actor.Villager
logic.ghost.HighGhost <|-- logic.ghost.PooYaGhost
logic.actor.Actor <|-- logic.actor.Monk
logic.item.Item <|-- logic.item.Banana
logic.ghost.Ghost <|-- logic.ghost.HighGhost
logic.ghost.HighGhost <|-- logic.ghost.PongGhost
logic.actor.Actor <|-- logic.actor.Monkey
logic.ghost.LowGhost <|-- logic.ghost.PryGhost
logic.ghost.Ghost <|-- logic.ghost.LowGhost
logic.ghost.LowGhost <|-- logic.ghost.MaBongGhost
logic.item.Item <|-- logic.item.Amulet
logic.actor.Actor <|-- logic.actor.GhostDoctor
logic.ghost.LowGhost <|-- logic.ghost.GaGhost
logic.item.Item <|-- logic.item.Leklai
@enduml